--- a/_data/content.yml
+++ b/_data/content.yml
@@ -9,204 +9,216 @@ about:
   image: "assets/img/man1.jpg"
   text: "
         <p>
-          <strong>Hello! I’m John Doe.</strong><br> Web designer from Ukraine, Kiev. I have rich experience in web site design and building, also I am good at wordpress. I love to talk with you about our unique.
+          <strong>Hello! I’m Thu Huynh, and I go by Ezra</strong><br> I'm a UX/UI designer driven by usability, accessibility and aesthetics. To me, design is like cooking, something can taste really good but doesn't look good. And as a chef/designer, I'm striving to achieve both.
         </p>
         "
   list:
     - label: "Name"
-      value: "24"
+      value: "Ezra"
 
-    - label: "Age"
-      value: "22 Years"
+    - label: "The only game I play these days"
+      value: "League of Legends"
 
-    - label: "Job"
-      value: "Web Developer"
+    - label: "Hobby"
+      value: "Cooking"
 
-    - label: "Citizenship"
-      value: "Ukraine"
+    - label: "Favorite weather"
+      value: "Rain Rain Rain"
 
-    - label: "Residence"
-      value: "Kiev"
+    - label: "Favorite fruit"
+      value: "Lychee"
 
     - label: "E-mail"
-      value: "johndoe@domain.com"
+      value: "thuah@umich.edu"
 
   download:
-    text: "Download CV"
-    link: "https://drive.google.com/"
+    text: "Download my resume"
+    link: "https://drive.google.com/file/d/1N5p3jYz3KAUPOUx0sg7-2xLUbRMrO90a/view?usp=sharing"
 
 ### Resume [ resume ]
 resume:
   experience:
     title: "Experience"
     items:
-      - year: "2013 - Present"
-        name: "Art Director - Facebook Inc"
-        text: "Collaborate with creative and development teams on the execution of ideas."
+      - year: "Feb 2021 - May 2021"
+        name: "UX/UI Intern - The Runway"
+        text: "Redesigned and upgraded The Runway’s website (therunwayapp.com) with the goal to enable models to showcase and sell their own modeling assets on one platform."
 
-      - year: "2011 - 2012"
-        name: "Front-end Developer - Google Inc"
-        text: "Monitored technical aspects of the front-end delivery for several projects."
+      - year: "April 2019 - June 2020"
+        name: "Undergraduate Research Assistant - Google Inc"
+        text: "Assisted in literature review and analyzing 31 fertility mobile apps on Google Play Store and make apps evaluation to identify rooms for improvement"
 
-      - year: "2009 - 2010"
-        name: "Senior Developer - Abc Inc"
-        text: "Optimize website performance using latest technology."
+#      - year: "2009 - 2010"
+#        name: "Senior Developer - Abc Inc"
+#        text: "Optimize website performance using latest technology."
         
   education:
     title: "Education"
     items:
-      - year: "2006 - 2008"
-        name: "Art University of New York"
-        text: "Bachelor's Degree in Computer Science ABC Technical Institute, Jefferson, Missouri"
+      - year: "2020 - 2022"
+        name: "University of Michigan, Ann Arbor"
+        text: "Master's Degree in Information, UX Research and Design"
 
-      - year: "2005 - 2006"
-        name: "Programming Course"
-        text: "Coursework - Git, WordPress, Javascript, iOS, Android."
+      - year: "2017 - 2020"
+        name: "University of California, Irvine"
+        text: "Bachelor's Degree in Software Engineering"
 
-      - year: "2004 - 2005"
-        name: "Web Design Course"
-        text: "Converted Photoshop layouts to web pages using HTML, CSS, and JavaScript"
+#      - year: "2004 - 2005"
+#        name: "Web Design Course"
+#        text: "Converted Photoshop layouts to web pages using HTML, CSS, and JavaScript"
 
 ### Skills [ skills ]
-skills:
-  columns:
-    - type: "default" #skills progress type - default, dotted, circles, list
-      title: "Design Skills"
-      items:
-        - label: "Web Design"
-          value: "70" #0-100 progress in %
+# skills:
+#   columns:
+#     - type: "default" #skills progress type - default, dotted, circles, list
+#       title: "Design Skills"
+#       items:
+#         - label: "Web Design"
+#           value: "70" #0-100 progress in %
 
-        - label: "Illustrations"
-          value: "90" #0-100 progress in %
+#         - label: "Illustrations"
+#           value: "90" #0-100 progress in %
 
-        - label: "Photoshop"
-          value: "75" #0-100 progress in %
+#         - label: "Photoshop"
+#           value: "75" #0-100 progress in %
 
-        - label: "Graphic Design"
-          value: "80" #0-100 progress in %
+#         - label: "Graphic Design"
+#           value: "80" #0-100 progress in %
 
-    - type: "dotted" #skills progress type - default, dotted, circles, list
-      title: "Languages Skills"
-      items:
-        - label: "English"
-          value: "90" #0-100 progress in %
+#     - type: "dotted" #skills progress type - default, dotted, circles, list
+#       title: "Languages Skills"
+#       items:
+#         - label: "English"
+#           value: "90" #0-100 progress in %
 
-        - label: "German"
-          value: "70" #0-100 progress in %
+#         - label: "German"
+#           value: "70" #0-100 progress in %
 
-        - label: "Italian"
-          value: "55" #0-100 progress in %
+#         - label: "Italian"
+#           value: "55" #0-100 progress in %
 
-        - label: "French"
-          value: "85" #0-100 progress in %
+#         - label: "French"
+#           value: "85" #0-100 progress in %
 
-    - type: "circles" #skills progress type - default, dotted, circles, list
-      title: "Coding Skills"
-      items:
-        - label: "WordPress"
-          value: "95" #0-100 progress in %
+#     - type: "circles" #skills progress type - default, dotted, circles, list
+#       title: "Coding Skills"
+#       items:
+#         - label: "WordPress"
+#           value: "95" #0-100 progress in %
 
-        - label: "PHP / MYSQL"
-          value: "75" #0-100 progress in %
+#         - label: "PHP / MYSQL"
+#           value: "75" #0-100 progress in %
 
-        - label: "Angular / JavaScript"
-          value: "85" #0-100 progress in %
+#         - label: "Angular / JavaScript"
+#           value: "85" #0-100 progress in %
 
-        - label: "HTML / CSS"
-          value: "90" #0-100 progress in %
+#         - label: "HTML / CSS"
+#           value: "90" #0-100 progress in %
 
     - type: "list" #skills progress type - default, dotted, circles, list
       title: "Knowledge"
       items:
-        - label: "Website hosting"
+        - label: "Prototyping"
           value: "" #0-100 progress in %
 
-        - label: "iOS and android apps"
+        - label: "User research"
           value: "" #0-100 progress in %
 
-        - label: "Create logo design"
+        - label: "Usability Testing"
           value: "" #0-100 progress in %
 
-        - label: "Design for print"
+        - label: "Affinity Diagramming"
           value: "" #0-100 progress in %
 
-        - label: "Modern and mobile-ready"
+        - label: "Wireframing"
           value: "" #0-100 progress in %
 
-        - label: "Advertising services include"
+        - label: "Graphic Design"
           value: "" #0-100 progress in %
 
-        - label: "Graphics and animations"
+        - label: "Interviewing"
           value: "" #0-100 progress in %
 
-        - label: "Search engine marketing"
+        - label: "HTML/CSS/JavaScript"
+          value: "" #0-100 progress in %
+          
+        - label: "Figma"
+          value: "" #0-100 progress in %
+                  
+        - label: "Photoshop | Illustrator"
+          value: "" #0-100 progress in %
+          
+        - label: "Miro | Kanban | Slack | Trello"
+          value: "" #0-100 progress in %
+          
+        - label: "C++ | Java | Python"
           value: "" #0-100 progress in %
 
 ### Services [ services ]
-services:
-  title: "My Services"
-  items:
-    - icon: "social-html5"
-      name: "Front-end"
-      text: "Front-end web development is the practice of converting data to a graphical interface, through the use of HTML, CSS, and JavaScript."
+# services:
+#   title: "My Services"
+#   items:
+#     - icon: "social-html5"
+#       name: "Front-end"
+#       text: "Front-end web development is the practice of converting data to a graphical interface, through the use of HTML, CSS, and JavaScript."
 
-    - icon: "ipad"
-      name: "Mobile Application"
-      text: "A mobile application, most commonly referred to as an app, is a type of application software designed to run on a mobile."
+#     - icon: "ipad"
+#       name: "Mobile Application"
+#       text: "A mobile application, most commonly referred to as an app, is a type of application software designed to run on a mobile."
 
-    - icon: "ios-search-strong"
-      name: "Investigation"
-      text: "Investigation, examination, inquiry, research express the idea of an active effort to find out something."
+#     - icon: "ios-search-strong"
+#       name: "Investigation"
+#       text: "Investigation, examination, inquiry, research express the idea of an active effort to find out something."
 
-    - icon: "code"
-      name: "Programming"
-      text: "Computer programming is the process of designing and building an executable computer program to accomplish a specific."
+#     - icon: "code"
+#       name: "Programming"
+#       text: "Computer programming is the process of designing and building an executable computer program to accomplish a specific."
 
-    - icon: "help-buoy"
-      name: "Awesome Supports"
-      text: "Awesome Support is the most versatile and feature-rich. Get started for free and add premium features as your business grows."
+#     - icon: "help-buoy"
+#       name: "Awesome Supports"
+#       text: "Awesome Support is the most versatile and feature-rich. Get started for free and add premium features as your business grows."
 
-    - icon: "social-chrome"
-      name: "Web Development"
-      text: "Web development is the work involved in developing a Web site for the Internet or an intranet and social network services."
+#     - icon: "social-chrome"
+#       name: "Web Development"
+#       text: "Web development is the work involved in developing a Web site for the Internet or an intranet and social network services."
 
-### Clients [ clients ]
-clients:
-  title: "Clients"
-  items:
-    - url: "https://www.google.com"
-      image: "assets/img/clients/client_1.png"
+# ### Clients [ clients ]
+# clients:
+#   title: "Clients"
+#   items:
+#     - url: "https://www.google.com"
+#       image: "assets/img/clients/client_1.png"
 
-    - url: "https://www.google.com"
-      image: "assets/img/clients/client_2.png"
+#     - url: "https://www.google.com"
+#       image: "assets/img/clients/client_2.png"
 
-    - url: "https://www.google.com"
-      image: "assets/img/clients/client_3.png"
+#     - url: "https://www.google.com"
+#       image: "assets/img/clients/client_3.png"
 
-    - url: "https://www.google.com"
-      image: "assets/img/clients/client_1.png"
+#     - url: "https://www.google.com"
+#       image: "assets/img/clients/client_1.png"
 
-    - url: "https://www.google.com"
-      image: "assets/img/clients/client_2.png"
+#     - url: "https://www.google.com"
+#       image: "assets/img/clients/client_2.png"
 
-    - url: "https://www.google.com"
-      image: "assets/img/clients/client_3.png"
+#     - url: "https://www.google.com"
+#       image: "assets/img/clients/client_3.png"
 
 ### Contact Info [ contacts-info ]
 contacts_info:
-  title: "Get in Touch"
+  title: "Find me here :D"
   list:
     - label: "Phone"
       icon: "android-phone-portrait"
-      value: "+ (231) 456 67 89"
+      value: "+ (208) 240 4678"
 
     - label: "Email"
       icon:  "email"
-      value: "<a href='mailto:john-doe@gmail.com'>john-doe@gmail.com</a>"
+      value: "<a href='mailto:thuah@umich.edu'>thuah@umich.edu</a>"
 
     - label: "Address"
       icon: "ios-location"
-      value: "2621 W Pico Blvd, Los Angeles"
+      value: "Up to my mood"
 
 ### Contact Form [ contacts-form ]
 contacts_form:
