--- a/_data/content.yml
+++ b/_data/content.yml
@@ -19,8 +19,8 @@ about:
     - label: "Favorite fruit"
       value: "Lychee"
 
-    - label: "The only game I play these days"
-      value: "League of Legends"
+    - label: "Motto"
+      value: "Live to eat"
 
     - label: "Hobby"
       value: "Cooking"
