--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,7 +4,7 @@
 
 ### Started
 started:
-  title: "I'm John Doe"
+  title: "Hi I'm Ezra"
   typed:
-    - "UX/UI Designer and Front-end Director."
-    - "Based in Kiev."
+    - "UX/UI Designer"
+    - "_contemplating the meaning of life_"
