--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 # basic settings
-title: "Ezra | A designer"
+title: "Ezra"
 email: "thuah@umich.edu"
-description: "Ezra's corner"
+description: "'s corner"
 author: "Ezra"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "hellocoldwinter.github.io" # the base hostname & protocol for your site, e.g. http://example.com
