--- a/_data/content.yml
+++ b/_data/content.yml
@@ -86,7 +86,7 @@ skills:
         - label: "Miro | Kanban | Slack | Trello"
           value: "" #0-100 progress in %
 
-        - label: "Search engine marketing"
+        - label: "Figma | AdobeXD"
           value: "" #0-100 progress in %
 
 ### Contact Info [ contacts-info ]
