--- a/_data/content.yml
+++ b/_data/content.yml
@@ -9,7 +9,7 @@ about:
   image: "assets/img/butler.png"
   text: "
         <p>
-          <strong>Hello! I’m Thu Huynh, and I go by Ezra</strong><br> I'm a UX/UI designer driven by usability, accessibility and aesthetics. To me, design is like cooking, something can taste really good but doesn't look good. And as a chef/designer, I'm striving to achieve both.
+          <strong>Hello! I’m Thu Huynh, and I go by Ezra</strong><br> I'm a UX/UI designer driven by usability and aesthetics. To me, design is like cooking, a dish can taste really good but still does not look good. And as a chef/designer, I am striving to achieve both.
         </p>
         "
   list:
@@ -53,7 +53,7 @@ resume:
     items:
       - year: "2020 - 2022"
         name: "University of Michigan, Ann Arbor"
-        text: "Master's Degree in Information,  UX Research and Design"
+        text: "Master's Degree in Information, UX Research & Design"
 
       - year: "2017 - 2020"
         name: "University of California, Irvine"
