--- a/_data/content.yml
+++ b/_data/content.yml
@@ -33,7 +33,7 @@ about:
 
   download:
     text: "Download CV"
-    link: "https://drive.google.com/"
+    link: "https://drive.google.com/file/d/1N5p3jYz3KAUPOUx0sg7-2xLUbRMrO90a/view?usp=sharing"
 
 ### Resume [ resume ]
 resume:
@@ -74,7 +74,7 @@ skills:
         - label: "Wireframing"
           value: "" #0-100 progress in %
 
-        - label: "Graphic Design"
+        - label: "Inteviewing"
           value: "" #0-100 progress in %
 
         - label: "Interviewing"
