--- a/_data/content.yml
+++ b/_data/content.yml
@@ -32,7 +32,7 @@ about:
       value: "thuah@umich.edu"
 
   download:
-    text: "Download CV"
+    text: "Download my resume"
     link: "https://drive.google.com/file/d/1N5p3jYz3KAUPOUx0sg7-2xLUbRMrO90a/view?usp=sharing"
 
 ### Resume [ resume ]
