--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,26 +17,16 @@ portfolio:
       slug: "box-item"
       active: 1
 
-    - name: "Video"
-      slug: "f-video"
-      active: 0
-
-    - name: "Music"
-      slug: "f-music"
-      active: 0
-
-    - name: "Links"
-      slug: "f-link"
-      active: 0
-
-    - name: "Image"
-      slug: "f-image"
-      active: 0
-
-    - name: "Gallery"
-      slug: "f-gallery"
-      active: 0
-
-    - name: "Content"
+    - name: "UI/UX Design"
       slug: "f-content"
       active: 0
+
+    - name: "Research"
+      slug: "f-content"
+      active: 0
+
+    - name: "Development"
+      slug: "f-content"
+      active: 0
+
+
