minor change resume

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -9,7 +9,7 @@ about:
   image: "assets/img/butler.png"
   text: "
         <p>
-          <strong>Hello! I’m Thu Huynh, and I go by Ezra</strong><br> I'm a UX/UI designer driven by usability and aesthetics. To me, design is like cooking, a dish can taste really good but still does not look good. And as a chef/designer, I am striving to achieve both.
+          <strong>Hello! I’m Thu Huynh, and I go by Ezra</strong><br> I'm a UX/UI designer driven by usability and aesthetics. To me, design is like cooking, a dish can taste really good but still does not look good. And as a designer/cook, I am striving to achieve both.
         </p>
         "
   list:
