--- a/_data/content.yml
+++ b/_data/content.yml
@@ -20,7 +20,7 @@ about:
       value: "Live to eat"
 
     - label: "Favorite character"
-      value: "Hatake Kakashi"
+      value: "Kakashi"
 
     - label: "Bedside book"
       value: "Witch Child"
