--- a/_data/content.yml
+++ b/_data/content.yml
@@ -40,9 +40,13 @@ resume:
   experience:
     title: "Experience"
     items:
+      - year: "May 2021 - Present"
+        name: "UX/UI Intern - The Runway"
+        text: "Illustrated user flows and designed wireframes/mock-ups for Boxenstop, a new platform of The Puzzlers, aiming to bring small businesses together."
+      
       - year: "Feb 2021 - May 2021"
         name: "UX/UI Intern - The Runway"
-        text: "Redesigned and upgraded The Runway’s website (therunwayapp.com) with the goal to enable models to showcase and sell their own modeling assets on one platform."
+        text: "Design The Runway’s website (therunwayapp.com) with the goal to enable models to showcase and sell their own modeling assets on one platform."
 
       - year: "April 2019 - June 2020"
         name: "Undergraduate Research Assistant - HAI Lab"
