--- a/_data/content.yml
+++ b/_data/content.yml
@@ -41,7 +41,7 @@ resume:
     title: "Experience"
     items:
       - year: "May 2021 - Present"
-        name: "UX/UI Intern - The Runway"
+        name: "Design Intern - The Runway"
         text: "Illustrated user flows and designed wireframes/mock-ups for Boxenstop, a new platform of The Puzzlers, aiming to bring small businesses together."
       
       - year: "Feb 2021 - May 2021"
