--- a/_data/content.yml
+++ b/_data/content.yml
@@ -42,7 +42,7 @@ resume:
     items:
       - year: "May 2021 - Present"
         name: "Design Intern - The Puzzlers"
-        text: "Illustrated user flows and designed wireframes/mock-ups for Boxenstop, a new platform of The Puzzlers, aiming to bring small businesses together."
+        text: "Illustrated user flows and designed wireframes/mock-ups for The Puzzlers' new services, aiming to bring small businesses together."
       
       - year: "Feb 2021 - May 2021"
         name: "UX/UI Intern - The Runway"
